# semiconductor

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .releaserc  CHANGELOG.md  Dockerfile  Makefile  README.md  __version__.py  add_user.js  database_cli.py  docker-compose.yaml  insert_content.py  llm_help.txt  models.txt  my_app.txt  package-lock.json  package.json  pyproject.toml  requirements.in  requirements.txt  semi_project.txt  tech_overview.md  test_result.txt  tests-results.xml
.github/workflows/: docker-image.yml
app/: __version__.py  app.py  main.py  requirements.txt
app/routers/: general_overview.py  home.py  main.py  pages.py  technical_overview.py  tutorial.py
app/static/: styles.css  styles2.css
app/static/css/: styles.css
app/templates/: about_spo.html  amplitude.html  analog_and_digital.html  base.html  binary_counting.html  chapter_review_introduction.html  course_overview.html  digital_logic.html  electricity_electronics.html  frequency.html  general_overview.html  glossary.html  history_electronics.html  index.html  integrated_circuit_development.html  integrated_circuit_development2.html  integrated_circuits.html  introduction.html  introduction_modal.html  large_scale_devices.html  main_menu.html  medium_scale_devices.html  objectives.html  small_scale_devices.html  solid_state.html  tutorial.html  ultra_large_scale_devices.html  vacuum_tubes.html  very_large_scale_devices.html
app/templates/general_overview/: chapter_review_introduction.html  general_overview.html  introduction.html
tests/: rl_test.py  test_main.py
(+24 files in other folders)
