[tool.poetry]
name = "app"
version = "1.3.0"
description = "Semiconductor Processing Overview"
authors = ["clement.machado <cm@helloai.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
jinja2 = "^3.1.4"
motor = "^3.6.0"
markdown = "^3.7"
pytest = "^8.3.3"
pre-commit = "^3.8.0"
poetry = "^1.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
